# waer-gear-academy

./: Cargo.toml
.github/workflows/: CI.yml
game-session/: Cargo.toml
game-session/io/: Cargo.toml
game-session/io/src/: lib.rs
game-session/src/: lib.rs
game-session/tests/: basic.rs
wordle/: Cargo.toml
wordle/io/: Cargo.toml
wordle/src/: lib.rs
